--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,5 +23,8 @@
                 </article>
             </div>
         </div>
+        <div class="footerInferior">
+            ©️ 2021 by BAgastro. PAWLUK, BENGOLEA & GIMENEZ
+        </div>
     </div>
 </footer>
