--- a/public/css/app.css
+++ b/public/css/app.css
@@ -436,6 +436,9 @@ margin-left: 15px ;
 .action-button.delete {
   background-color: rgb(248, 69, 37);
 }
+.article{
+  padding: 10px;
+}
 .comments {
   padding: 30px 15px 15px 0;
 }
@@ -444,7 +447,7 @@ margin-left: 15px ;
   padding-bottom: 7.5px;
   border-bottom: 1px solid #dcdcdc;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .comments img{
   width: 40px;
@@ -686,5 +689,11 @@ textarea.form-input {
   .footer-data {
     width: 95%;
     margin: auto;
+  }
+  .footerInferior{
+    text-align: center;
+    padding: 5px;
+    font-size: 20x;
+
   }
 }
