css en index (productos) - reseñas products

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -34,24 +34,27 @@
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-								<strong> <a href="/profile">Nombre usuario: </a> </strong>
-								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+								<strong> <a href="/profile"> Lucia Perez </a> </strong>
+								Este lugar lo conocimos en una cena por el día de San Valentín de este año, y nos encantó.
+								Volvimos hace unas semanas con amigos y quedaron maravillados también ellos.
+								El reducto es pequeño y cálido con una ambientación entre moderna y minivalista y cuenta con una mesa para seis que puede reservar, en la cava, rodeado de vinos y con vista al salón y a la cocina.
+								Cuenta con una cocina de sibaritas, donde el chef hace delicias para el paladar.</p>
 							</div>
 						</article>
 						<article>
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									<strong> <a href="/profile"> Ignacio Apela </a> </strong>
+									Muy lindo lugar. No es muy grande, y las mesas estan bien separadas para distancia social. La atencion es excelente, tienen un sommelier para recomendar vinos. La carta es chica y ofrece buenas opciones que son muy ricas. Muy linda la decoracion del lugar.</p>
 							</div>
 						</article>
 						<article>
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<strong> <a href="/profile"> Miranda Valdez</a> </strong>
+									Las porciones son extremadamente chicas y los costos exageradamente grandes!!! Lo pierde todo....los postres, no gasten en eso!!!
 									</p>
 							</div>
 						</article>
@@ -59,17 +62,16 @@
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+									<strong> <a href="/profile"> Marcelo Torcuato </a> </strong>
+									cocina fantástica, atención impecable y cava de vinos distintos, vale la pena siempre. Vuelvo todas las semanas</p>
 							</div>
 						</article>
 						<article>
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
+									<strong> <a href="/profile"> Eric Sartre </a> </strong>
+									Nos atendieron mal, poco amables, los platos son muy chicos, te quedas con hambre y no gran cosa!!! Carísimo para lo que ofrecen!!! No vuelvo!!!!!</p>
 							</div>
 						</article>
 
@@ -160,7 +162,7 @@
 			<!-- product detail 3  -->
 	<div class="container products-wrapper">
 		<div class="d-flex align-items-center">
-			<h2 class="products-title">Gran Dabbang</h2> 
+			<h2 class="products-title">Niño Gordo</h2> 
 			<p class="product-detail-description">
 				<a href="/product-add">Editar</a>
 			</p>
@@ -384,7 +386,7 @@
 			<div class="product-detail">
 				<div class="row">
 					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="/images/products/default-mishiguene.jpg" alt="" class="product-detail-img">
+						<img src="/images/products/mishiguene.jpg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
 							Tomás Kalika, el dueño de este restaurante, es un cocinero argentino enfocado en dar una experiencia basada en el judaísmo, tanto cultural como gastronómicamente..</p>
 					</article>
