--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,13 +25,13 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/alos.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<h2>Alo's</h2>
+							<p>Este moderno bistró, que abre para el desayuno, el almuerzo y la cena, se convirtió rápidamente en un éxito por su forma única de transformar los sabores argentinos familiares.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -41,12 +41,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/mudra.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Mudra Plant Based</h2>
+							<p>Mudrá es una cocina vegana muy bien diseñada y ejecutada. La carta recorre todo tipo de platos: desde pizza y hamburguesas hasta sushi, pasando por pasta, tacos y pastelería..</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -56,12 +55,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/dabbang.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Niño Gordo</h2>
+							<p>Tal vez uno de los restaurantes de la lista más difíciles de encasillar. La comida tiene mucha influencia de platos y street food asiático, pero no es un restaurante asiático. Se siente bastante argentino.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -71,12 +69,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/donjulio.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Don Julio</h2>
+							<p>La parrilla palermitana está en boca de todos, no solo porque tuvo el puesto más alto en la lista latina, sino que además, fue el único restaurant de nuestro país en integrar la lista mundial, en el puesto 34..</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -96,11 +93,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/proper.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<h2>Proper</h2>
+							<p>De afuera este garage sobre calle Araoz poco te va a llevar a un restaurante en esta lista, pero todo eso se borra cuando probás el primer plato..</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -110,11 +107,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/elena.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<h2>Elena</h2>
+							<p>Ubicado en el hotel Four Seasons, en Buenos Aires. Elena es probablemente el lugar donde más sofisticado te sientas comiendo un bife de chorizo en Buenos Aires..</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -124,11 +121,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/narda.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<h2>Narda Comedor</h2>
+							<p>El Comedor en el bajo Belgrano tiene desayunos, almuerzos, meriendas y cenas, uno más rico que el otro..</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -138,11 +135,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/tegui.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<h2>Tegui</h2>
+							<p>El mega reconocido y ya a esta instancia histórico proyecto de Germán Martitegui sigue ocupando los primero puestos de la lista. Con un precio fijo, es una experiencias gastronómicas por pasos pionera en la utilización de producto local de altísima calidad.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
