--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -33,9 +33,9 @@
 				</div>
 	
 				<div class="col-12 col-md-4">
-					<a class="main-header_credit-link"></a>
-						<i class="fas fa-hand-holding-usd"></i>
-						Comer bien, es vivir bien.
+					<a class="main-header_credit-link">
+						
+						Comer bien, es vivir bien..
 					</a>
 				</div>
 			</div>
@@ -46,13 +46,13 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li><a href="/">Favoritos</a></li>
-					<li><a href="/product-add">Añadir favoritos</a></li>
+					<li class="log"><a href="/">Favoritos</a></li>
+					<li class="log"><a href="/product-add">Añadir favoritos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
 					<li><a href="/profile">
-							Tomas Rogel <i class="fas fa-user"></i>
+							Federico Roca <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
