--- a/views/product.ejs
+++ b/views/product.ejs
@@ -108,24 +108,24 @@
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+									<strong> <a href="/profile">Lucas Sanchez </a> </strong>
+									Cada plato es una obra de arte que te va llevando en un viaje gastronómico increíble. La calidad, presentación, ambientación, maridaje, todo en una perfecta sintonia que sólo puede lograr Pedro Bargero.</p>
 								</div>
 							</article>
 							<article>
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+										<strong> <a href="/profile"> Marisol Orio </a> </strong>
+										hemos ido varias veces con mi marido, la primera vez porque su chef inicial fue Soldad Nardeli, quien es una de mis preferidas, por su trayectoria en el rubro. siempre sorprenden con sus platos, tanto en la elaboración como la presentación. insuperables.</p>
 								</div>
 							</article>
 							<article>
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										<strong> <a href="/profile"> Bautista Sanchez </a> </strong>
+										La atencion fue mala, y la comida no es rica.
 										</p>
 								</div>
 							</article>
@@ -133,17 +133,16 @@
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+										<strong> <a href="/profile"> Santos Chismech </a> </strong>
+										Comida impecable, muy bien lograda y la barra es excelente. La atención de los chicos es muy buena. Nosotros vamos seguido y lo seguiremos haciendo..</p>
 								</div>
 							</article>
 							<article>
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
+										<strong> <a href="/profile"> Miguel Prado </a> </strong>
+										Fui solo pero el lugar es tan acogedor y el personal tan servicial que nunca percibí mi soledad. Súper recomendable! El souffle de DDL imperdible.</p>
 								</div>
 							</article>
 	
@@ -180,24 +179,24 @@
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-								<strong> <a href="/profile">Nombre usuario: </a> </strong>
-								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+								<strong> <a href="/profile"> Marcos Tortielo</a> </strong>
+								Desde la ambientación hasta los platos son un auténtico disfrute. No es barato, pero vale la pena probarlo una vez.</p>
 							</div>
 						</article>
 						<article>
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									<strong> <a href="/profile"> Delfina Mirasol</a> </strong>
+									Un lugar distinto, altamente recomendable. Comida fusión Arg-Japón con algo de picante y salsa agridulces. 👌🏾</p>
 							</div>
 						</article>
 						<article>
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<strong> <a href="/profile"> Carlos Carmen</a> </strong>
+									Excelente lugar para probar sabores distintos. Platos completamente distintos a los que probé. Sabores muy suaves que en combinación son increíbles. La atención de 10 también. Super recomendable.
 									</p>
 							</div>
 						</article>
@@ -205,17 +204,16 @@
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+									<strong> <a href="/profile"> Marina Lafourcade </a> </strong>
+									Muy rica la comida, un lugar para ir una vez a comer algo distinto y una ocasion especial ya que el precio es un poco elevado.</p>
 							</div>
 						</article>
 						<article>
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
+									<strong> <a href="/profile"> Indira Josefa </a> </strong>
+									Vale la pena conocerlo sin dudas, aunque los valores de los platos están por encima de la media, la comida es increíble y vale cada centavo pagado.</p>
 							</div>
 						</article>
 
@@ -252,24 +250,24 @@
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+									<strong> <a href="/profile"> Camila Busneli </a> </strong>
+									Vale la pena conocerlo sin dudas, aunque los valores de los platos están por encima de la media, la comida es increíble y vale cada centavo pagado.</p>
 								</div>
 							</article>
 							<article>
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+										<strong> <a href="/profile"> Natalia Sliped </a> </strong>
+										Todo excelente! La atención de todo el equipo super profesional! Todo cuidado al detalle! Cada plato espectacular. Super recomendable! Me encantó!</p>
 								</div>
 							</article>
 							<article>
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										<strong> <a href="/profile"> Benjamin Reynoso </a> </strong>
+										Atencion y calidad de sus carnes son perfectas. Todo mejora a medida que pasan el tiempo . No es económico pero siempre vale la pena la experiencia Don Julio, es eso experiencia de sabores y atencion
 										</p>
 								</div>
 							</article>
@@ -277,17 +275,16 @@
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+										<strong> <a href="/profile"> Lisandro Karz </a> </strong>
+										Inmejorable, buena relación calidad /precio Servicio excelente Torta de de cumpleaños de cortesia riquisima</p>
 								</div>
 							</article>
 							<article>
 								<img src="https://via.placeholder.com/35" alt="">
 								<div class="data">
 									<p class="user">
-										<strong> <a href="/profile">Nombre usuario: </a> </strong>
-										Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
+										<strong> <a href="/profile"> Paola Petruch </a> </strong>
+										Delicioso!</p>
 								</div>
 							</article>
 	
@@ -324,7 +321,7 @@
 							<img src="https://via.placeholder.com/35" alt="">
 							<div class="data">
 								<p class="user">
-								<strong> <a href="/profile">Nombre usuario: </a> </strong>
+								<strong> <a href="/profile">Silvestre Linguin </a> </strong>
 								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
 							</div>
 						</article>
