--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,7 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="https://previews.123rf.com/images/sanneberg/sanneberg1611/sanneberg161100860/65642082-retrato-de-hombre-feliz-sonriendo-para-la-c%C3%A1mara.jpg" alt="foto de perfil" class="foto-perfil">
+				<img src="/images/usuario.png" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
@@ -26,10 +26,10 @@
 					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
 				</div>
 				<div>
-					<ul class="">
-						<li>8 productos</li>
-						<li>200 seguidores</li>
-						<li>300 comentarios</li>
+					<ul>
+						<li class="infoUsuario">8 productos</li>
+						<li class="infoUsuario">200 seguidores</li>
+						<li class="infoUsuario">300 comentarios</li>
 					</ul>
 				</div>
 			</div>
@@ -48,11 +48,12 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/chila.jpg" alt="chila">
+							<img src="/images/products/mishiguene.jpg" alt="chila">
 						</figure>
 						<article class="product-box_data">
-							<h2> Chila</h2>
-							<p>Coqueto y vanguardista</p>
+							<h2> Mishiguene</h2>
+							<p>
+								Una experiencia basada en el judaísmo, tanto cultural como gastronómicamente</p>
 							<p>Comentarios: 5</p>
 						</article>
 					</a>
@@ -62,10 +63,10 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/tegui.jpg" alt="Tegui">
+							<img src="/images/products/alos.jpg" alt="Tegui">
 						</figure>
 						<article class="product-box_data">
-							<h2>Tegui</h2>
+							<h2>Alo's Bistro</h2>
 							<p>Experiencia de sabores</p>
 							<p>Comentarios: 12</p>
 						</article>
@@ -79,23 +80,9 @@
 							<img src="/images/products/donjulio.jpg" alt="don julio">
 						</figure>
 						<article class="product-box_data">
-							<h2>Don julio</h2>
+							<h2>Don Julio</h2>
 							<p> Parrilla palermitana, en boca de todos</p>
 							<p>Comentarios: 22</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/elena.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Elena</h2>
-							<p> Sofisticado y confortable, un lujo de Buenos Aires.</p>
-							<p>Comentarios: 41</p>
 						</article>
 					</a>
 				</section>
@@ -108,7 +95,21 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Mudra</h2>
-							<p>Cocina vegana para degustar todo tipo de platos</p>
+							<p> Cocina vegana para degustar todo tipo de platos</p>
+							<p>Comentarios: 41</p>
+						</article>
+					</a>
+				</section>
+			</div>
+			<div class="col-12 col-sm-6 col-lg-3">
+				<section class="product-box">
+					<a href="/product">
+						<figure class="product-box_image">
+							<img src="/images/products/tegui.jpg" alt="cafetera moulinex">
+						</figure>
+						<article class="product-box_data">
+							<h2>Tegui</h2>
+							<p>Restaurante con menú fijo de 11 pasos con excelente comida. </p>
 							<p>Comentarios: 11</p>
 						</article>
 					</a>
@@ -118,11 +119,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/mishiguene.jpg" alt="cafetera moulinex">
+							<img src="/images/products/elena.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Mishiguene</h2>
-							<p>Una experiencia basada en el judaísmo, tanto cultural como gastronómicamente</p>
+							<h2>Elena</h2>
+							<p>Sofisticado y confortable, un lujo de Buenos Aires.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
