--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!-- HOLA PROBANDO -->
 <!-- Include Head -->
-<%-include("./partials/head.ejs")%>
+<%-include("./partials/head.ejs")%> 
 
 <body>
 
