--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,15 +18,13 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"> Federico Roca
-				
-							<i class="fas fa-cog"></i>
-						</a>
-					</h1>
+
+					<h1 class="main-title"> Federico Roca</h1>
+		
 					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
 				</div>
 				<div>
-					<ul>
+					<ul class="el-usuario">
 						<li class="infoUsuario">8 productos</li>
 						<li class="infoUsuario">200 seguidores</li>
 						<li class="infoUsuario">300 comentarios</li>
