--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 /*====== Fonts ======*/
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
 
-
+@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Karantina&family=Open+Sans+Condensed:ital,wght@1,300&display=swap');
 
 
 
@@ -192,25 +192,27 @@ margin-left: 15px ;
 
 /*====== Banner ======*/
 .banner {
-  background-image: url(/images/img-home-banner.jpg);
+  
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   height: 100px;
-  margin-bottom: 90px;
+
 }
 
 
 
 /*====== Products ======*/
 .products-wrapper {
-  margin-top: 30px;
-  margin-bottom: 30px;
+
+  margin-bottom: 20px;
 }
 
 .products-title {
-  font-size: 3.4em;
+  font-size: 50px;
   font-weight: 400;
+  font-family:'Antonio', sans-serif;
+  text-transform: uppercase;
   color: var(--gray);
   text-align: center;
   
